velomorph-derive/tests/ui/malformed_field.stderr
error: Unsupported field morph key. Expected one of: from, with, default, skip
  --> tests/ui/malformed_field.rs:10:13
   |
10 |     #[morph(renamed = "id")]
   |             ^^^^^^^
